--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,8 @@ on:
     branches: [main, dev]
 
 jobs:
-  backend:
+  # NEW: Fast-fail Linting Job
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -15,6 +16,35 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: 'pip' # Automated caching
+
+      - name: Install Linting Tools
+        run: pip install ruff
+
+      - name: Backend Linting (Ruff)
+        run: |
+          cd backend
+          ruff check . 
+          ruff format --check .
+
+      - name: Frontend Linting (ESLint)
+        run: |
+          cd frontend
+          # Using --if-present so it doesn't crash if script is missing
+          npm install --only=dev 
+          npm run lint --if-present
+
+  backend-tests:
+    needs: lint # Only run if linting passes
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: 'pip'
 
       - name: Install backend deps
         run: |
@@ -26,7 +56,8 @@ jobs:
           cd backend
           pytest
 
-  frontend:
+  frontend-build:
+    needs: lint # Only run if linting passes
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -35,6 +66,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18"
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
       - name: Install frontend deps
         run: |
