--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,20 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Set up Node
+        uses: actions/setup-node@v4
         with:
-          python-version: "3.11"
-          cache: 'pip' # Automated caching
-
-      - name: Install Linting Tools
-        run: pip install ruff
-
-      - name: Backend Linting (Ruff)
-        run: |
-          cd backend
-          ruff check . 
-          ruff format --check .
+          node-version: "18"
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
       - name: Frontend Linting (ESLint)
         run: |
