--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,29 +2,11 @@ services:
   db:
     image: mysql:8
     environment:
-      MYSQL_DATABASE: app
+      MYSQL_DATABASE: neighbourly
       MYSQL_USER: user
       MYSQL_PASSWORD: pass
       MYSQL_ROOT_PASSWORD: root
 
-    ports:
-      - "3307:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-    healthcheck:
-      # mysqladmin ping is the standard way to check if MySQL is ready for queries
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-uuser", "-ppass"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
-
-  redis:
-    image: redis:7
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 5
 
   minio:
     image: minio/minio
@@ -48,13 +30,6 @@ services:
     env_file: .env
     ports:
       - "8000:8000"
-    depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      minio:
-        condition: service_healthy
 
   frontend:
     build: ./frontend
@@ -64,5 +39,4 @@ services:
       - backend
 
 volumes:
-  db_data:
   minio_data:
