added secure jwt based authentication and registeration/login

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=mysql://user:pass@db:3306/app
+DATABASE_URL=mysql+pymysql://user:pass@localhost:3306/neighbourly
 REDIS_URL=redis://redis:6379
 MINIO_ENDPOINT=http://minio:9000
 MINIO_ACCESS_KEY=minioadmin
