authorization work final

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       MYSQL_PASSWORD: pass
       MYSQL_ROOT_PASSWORD: root
 
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
   minio:
     image: minio/minio
@@ -28,8 +32,13 @@ services:
   backend:
     build: ./backend
     env_file: .env
+    environment:
+      - DATABASE_URL=mysql+pymysql://user:pass@db:3306/neighbourly
     ports:
       - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
 
   frontend:
     build: ./frontend
