--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,22 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: pass
       MYSQL_ROOT_PASSWORD: root
-
+    ports:
+      - "3307:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+    
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
+
+  adminer:
+    image: adminer
+    ports:
+      - "8081:8080"
+    depends_on:
+      - db
 
   minio:
     image: minio/minio
@@ -49,3 +60,4 @@ services:
 
 volumes:
   minio_data:
+  db_data:
