--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,21 @@
 FROM python:3.11-slim
+
 WORKDIR /app
+
+# Copy requirements first for better caching
 COPY requirements.txt .
+
+# Install dependencies (Lighter now, no local ML engines)
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Create db directory
 RUN mkdir -p /app/db
+
+# Copy application code
 COPY . .
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# Expose port
 EXPOSE 8000
+
+# Run the application
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
