--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,24 @@
-fastapi
-uvicorn
-pydantic
-sqlalchemy
+fastapi>=0.109.0
+pydantic>=2.6.0
+pydantic-settings>=2.1.0
+uvicorn>=0.27.0
+sqlalchemy>=2.0.23
 pytest
 httpx
-passlib[bcrypt]
-python-jose
+passlib[bcrypt]>=1.7.4
+python-jose[cryptography]>=3.3.0
 python-dotenv
 
 email-validator
 pydantic[email]
-python-multipart
-pymysql
+python-multipart>=0.0.6
+pymysql>=1.1.0
 cryptography
-bcrypt==4.0.1
+bcrypt==3.2.0
+
+# Search Engine Dependencies (Cloud Powered)
+google-generativeai>=0.3.1
+scikit-learn>=1.3.2
+h3>=3.7.6
+redis>=5.0.1
+numpy>=1.24.3
